--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "src/kitti_to_ros2bag"]
 	path = src/utilities/kitti_to_ros2bag
 	url = git@github.com:Chris7462/kitti_to_ros2bag.git
+[submodule "src/localization/kalman_filter"]
+	path = src/localization/kalman_filter
+	url = git@github.com:Chris7462/kalman_filter.git
+[submodule "src/localization/gps_imu_node"]
+	path = src/localization/gps_imu_node
+	url = git@github.com:Chris7462/gps_imu_node.git
+[submodule "src/localization/ekf_localizer"]
+	path = src/localization/ekf_localizer
+	url = git@github.com:Chris7462/ekf_localizer.git
