--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "src/perception/fcn_segmentation"]
 	path = src/perception/fcn_segmentation
 	url = https://github.com/Chris7462/fcn_segmentation.git
+[submodule "src/perception/fcn_segmentation_trt"]
+	path = src/perception/fcn_segmentation_trt
+	url = https://github.com/Chris7462/fcn_segmentation_trt.git
