--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,9 @@
 [submodule "src/perception/fcos_torch_backend"]
 	path = src/perception/fcos_torch_backend
 	url = https://github.com/Chris7462/fcos_torch_backend.git
+[submodule "src/perception/fcos_trt_backend"]
+	path = src/perception/fcos_trt_backend
+	url = https://github.com/Chris7462/fcos_trt_backend.git
+[submodule "src/perception/fcos_object_detection"]
+	path = src/perception/fcos_object_detection
+	url = https://github.com/Chris7462/fcos_object_detection.git
