--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "src/perception/scnn_trt_backend"]
 	path = src/perception/scnn_trt_backend
 	url = https://github.com/Chris7462/scnn_trt_backend.git
+[submodule "src/perception/scnn_lane_detection"]
+	path = src/perception/scnn_lane_detection
+	url = https://github.com/Chris7462/scnn_lane_detection.git
